--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -8,13 +8,6 @@ header {
     margin:0 2em ;
 }
 
-@media (max-width: 700px) {
-    header {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
 .title-principal.dark {
     color: #FFF;
 }
@@ -22,6 +15,18 @@ header {
 .title-principal h4 {
     margin-top: -1em;
     color: #8B8E9B;
+    float: inline-start;
+}
+
+@media (max-width: 700px) {
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .title-principal h4 {
+        float: none;
+    }
 }
 
 /* Theme Toggle CSS */
