--- a/src/css/CardTop.css
+++ b/src/css/CardTop.css
@@ -51,3 +51,7 @@
     margin-top: -2em;
     margin-bottom: 0.4em;
 }
+
+.card-top.dark .rodape-top h4, .card-top.dark .topo h4 {
+    color: #fff;
+}
